// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MemoActionsContainer /> Shallow rendering foreign memo 1`] = `
<MemoComponent
  isMemoOfCurrentUser={false}
  likedByCurrentUser={false}
  memo={
    Object {
      "$action": 0,
      "$meta": Object {
        "userId": "c56d7036d14071f7c2f16a64ea71fcdd41c90e9f2691de406e1847065267679f",
      },
      "$rev": 1,
      "$scope": "b626a31be85752ee925a8d1aacf6a89d1cf7ec6b3e70824ce142c2f679cfe820",
      "$scopeId": "aaVVBvinX2fNzbia3LxqKYaWD4JYta71Da",
      "$type": "memo",
      "createdAt": "2019-08-29T07:33:44.530Z",
      "message": "Lorem quia est odio nemo.",
    }
  }
  onLikeMemoClicked={[Function]}
  onRemoveLikeClicked={[Function]}
  onReplyClicked={[Function]}
/>
`;

exports[`<MemoActionsContainer /> Shallow rendering renders without crashing 1`] = `
<MemoComponent
  isMemoOfCurrentUser={true}
  likedByCurrentUser={false}
  memo={
    Object {
      "$action": 0,
      "$meta": Object {
        "userId": "d4a093ed4e56c8c2411281d829715d9ab552c0bb762065c9ca1d96d3fd07866d",
      },
      "$rev": 1,
      "$scope": "b626a31be85752ee925a8d1aacf6a89d1cf7ec6b3e70824ce142c2f679cfe820",
      "$scopeId": "yPyxJ3ppBYhMWgCGrLXPGtEhfbAG6XP6WL",
      "$type": "memo",
      "createdAt": "2019-08-29T07:32:26.641Z",
      "message": "Qui magnam maiores laboriosam animi sit aut.",
    }
  }
  onLikeMemoClicked={[Function]}
  onRemoveLikeClicked={[Function]}
  onReplyClicked={[Function]}
/>
`;
